--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,6 +10,13 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+	
+	<uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true"/>
 
     <application
         android:allowBackup="true"
@@ -39,6 +46,19 @@
             android:name=".ComparisonListActivity"
             android:label="@string/app_name"
             android:screenOrientation="landscape" />
+        
+        <activity
+            android:name=".ComparisonMapActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="landscape" />
+        
+        <meta-data android:name="com.google.android.gms.version"
+        android:value="@integer/google_play_services_version" />
+        <meta-data
+	    android:name="com.google.android.maps.v2.API_KEY"
+	    android:value="AIzaSyCwaIvJgbFvy5F1wA3rQfK_8HUR6VS2yzA"/>
+        
+        
     </application>
 
 </manifest>
