--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,44 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="edu.illinois.engr.web.cs465uiui"
-    android:versionCode="1"
-    android:versionName="1.0" >
+	package="edu.illinois.engr.web.cs465uiui"
+	android:versionCode="1"
+	android:versionName="1.0" >
 
-    <uses-sdk
-        android:minSdkVersion="15"
-        android:targetSdkVersion="21" />
+	<uses-sdk
+		android:minSdkVersion="15"
+		android:targetSdkVersion="21" />
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-    <application
-        android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
-        <activity
-            android:name=".SearchableActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="landscape" >
+	<application
+		android:allowBackup="true"
+		android:icon="@drawable/ic_launcher"
+		android:label="@string/app_name"
+		android:theme="@style/AppTheme" >
+		<activity
+			android:name="edu.illinois.engr.web.cs465uiui.SearchableActivity"
+			android:label="@string/app_name"
+			android:screenOrientation="landscape" >
+			<meta-data
+				android:name="android.app.searchable"
+				android:resource="@xml/searchable" />
+		</activity>
+		<activity
+			android:name="edu.illinois.engr.web.cs465uiui.MainActivity"
+			android:label="@string/title_activity_main" >
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN" />
 
-            <meta-data
-                android:name="android.app.searchable"
-                android:resource="@xml/searchable" />
-        </activity>
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/title_activity_main" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-
-        </activity>
-        <activity
-            android:name=".ComparisonListActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="landscape" />
-    </application>
+				<category android:name="android.intent.category.LAUNCHER" />
+			</intent-filter>
+		</activity>
+		<activity
+			android:name="edu.illinois.engr.web.cs465uiui.ComparisonListActivity"
+			android:label="@string/app_name"
+			android:screenOrientation="landscape" />
+		<activity
+			android:name="edu.illinois.engr.web.cs465uiui.QueryActivity"
+			android:label="@string/title_activity_query" >
+		</activity>
+	</application>
 
 </manifest>
