--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -52,6 +52,11 @@
             android:label="@string/app_name"
             android:screenOrientation="landscape" />
         
+        <activity
+			android:name=".SearchMapActivity"
+			android:label="@string/app_name">          
+ 		</activity>
+        
         <meta-data android:name="com.google.android.gms.version"
         android:value="@integer/google_play_services_version" />
         <meta-data
