query screen: time dialog implemented

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -29,7 +29,6 @@
 			android:label="@string/title_activity_main" >
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
-
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
@@ -40,6 +39,11 @@
 		<activity
 			android:name="edu.illinois.engr.web.cs465uiui.QueryActivity"
 			android:label="@string/title_activity_query" >
+			<!-- TODO temporary -->
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN" />
+				<category android:name="android.intent.category.LAUNCHER" />
+			</intent-filter>
 		</activity>
 	</application>
 
