--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,7 +24,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".SearchableActivity"
+            android:name="edu.illinois.engr.web.cs465uiui.search.SearchableActivity"
             android:label="@string/app_name"
             android:screenOrientation="landscape" >
 
@@ -33,7 +33,7 @@
                 android:resource="@xml/searchable" />
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".main.MainActivity"
             android:label="@string/title_activity_main" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -43,17 +43,17 @@
 
         </activity>
         <activity
-            android:name=".ComparisonListActivity"
+            android:name="edu.illinois.engr.web.cs465uiui.comparison.list.ComparisonListActivity"
             android:label="@string/app_name"
             android:screenOrientation="landscape" />
         
         <activity
-            android:name=".ComparisonMapActivity"
+            android:name="edu.illinois.engr.web.cs465uiui.comparison.map.ComparisonMapActivity"
             android:label="@string/app_name"
             android:screenOrientation="landscape" />
 
         <activity
-			android:name=".SearchMapActivity"
+			android:name="edu.illinois.engr.web.cs465uiui.search.SearchMapActivity"
 			android:label="@string/app_name">          
  		</activity>
         
