--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,7 +24,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="edu.illinois.engr.web.cs465uiui.search.SearchableActivity"
+            android:name="edu.illinois.engr.web.cs465uiui.search.SearchActivity"
             android:label="@string/app_name"
             android:screenOrientation="landscape" >
 
