--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,8 +25,7 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="edu.illinois.engr.web.cs465uiui.search.SearchActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="landscape" >
+            android:label="@string/app_name" >
 
             <meta-data
                 android:name="android.app.searchable"
@@ -44,13 +43,11 @@
         </activity>
         <activity
             android:name="edu.illinois.engr.web.cs465uiui.comparison.list.ComparisonListActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="landscape" />
+            android:label="@string/app_name"/>
         
         <activity
             android:name="edu.illinois.engr.web.cs465uiui.comparison.map.ComparisonMapActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="landscape" />
+            android:label="@string/app_name" />
 
         <activity
 			android:name="edu.illinois.engr.web.cs465uiui.search.SearchMapActivity"
