--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,26 +24,21 @@
 		android:label="@string/app_name"
 		android:theme="@style/AppTheme" >
 		<activity
-			android:name="edu.illinois.engr.web.cs465uiui.SearchableActivity"
+			android:name="edu.illinois.engr.web.cs465uiui.MainActivity"
+			android:label="@string/title_activity_main" >
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN" />
+				<category android:name="android.intent.category.LAUNCHER" />
+			</intent-filter>
+		</activity>
+		<activity
+			android:name="edu.illinois.engr.web.cs465uiui.search.SearchActivity"
 			android:label="@string/app_name"
 			android:screenOrientation="landscape" >
 			<meta-data
 				android:name="android.app.searchable"
 				android:resource="@xml/searchable" />
 		</activity>
-		<activity
-			android:name="edu.illinois.engr.web.cs465uiui.MainActivity"
-			android:label="@string/title_activity_main" >
-			<intent-filter>
-				<action android:name="android.intent.action.MAIN" />
-
-				<category android:name="android.intent.category.LAUNCHER" />
-			</intent-filter>
-		</activity>
-		<activity
-			android:name="edu.illinois.engr.web.cs465uiui.ComparisonListActivity"
-			android:label="@string/app_name"
-			android:screenOrientation="landscape" />
 		<activity
 			android:name="edu.illinois.engr.web.cs465uiui.QueryActivity"
 			android:label="@string/title_activity_query" >
@@ -53,6 +48,10 @@
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
+		<activity
+			android:name="edu.illinois.engr.web.cs465uiui.comparison.list.ComparisonListActivity"
+			android:label="@string/app_name"
+			android:screenOrientation="landscape" />
 	</application>
 
 </manifest>
