--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -33,25 +33,28 @@
 		</activity>
 		<activity
 			android:name="edu.illinois.engr.web.cs465uiui.search.SearchActivity"
-			android:label="@string/app_name"
-			android:screenOrientation="landscape" >
-			<meta-data
-				android:name="android.app.searchable"
-				android:resource="@xml/searchable" />
+			android:label="@string/app_name" >
 		</activity>
 		<activity
 			android:name="edu.illinois.engr.web.cs465uiui.QueryActivity"
 			android:label="@string/title_activity_query" >
-			<!-- TODO temporary -->
-			<intent-filter>
-				<action android:name="android.intent.action.MAIN" />
-				<category android:name="android.intent.category.LAUNCHER" />
-			</intent-filter>
 		</activity>
 		<activity
 			android:name="edu.illinois.engr.web.cs465uiui.comparison.list.ComparisonListActivity"
-			android:label="@string/app_name"
-			android:screenOrientation="landscape" />
+			android:label="@string/app_name" />
+		<activity
+			android:name="edu.illinois.engr.web.cs465uiui.comparison.map.ComparisonMapActivity"
+			android:label="@string/app_name" />
+		<activity
+			android:name="edu.illinois.engr.web.cs465uiui.search.SearchMapActivity"
+			android:label="@string/app_name">          
+		</activity>
+		
+		<meta-data android:name="com.google.android.gms.version"
+			android:value="@integer/google_play_services_version" />
+		<meta-data
+			android:name="com.google.android.maps.v2.API_KEY"
+			android:value="AIzaSyCwaIvJgbFvy5F1wA3rQfK_8HUR6VS2yzA"/>
 	</application>
 
 </manifest>
