--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -33,7 +33,7 @@
 		</activity>
 		<activity
 			android:name="edu.illinois.engr.web.cs465uiui.search.SearchActivity"
-			android:configChanges="orientation|screenSize"
+			android:windowSoftInputMode="stateHidden"
 			android:label="@string/app_name" >
 		</activity>
 		<activity
