--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -38,7 +38,7 @@
 		</activity>
 		<activity
 			android:name="edu.illinois.engr.web.cs465uiui.QueryActivity"
-			android:label="@string/title_activity_query" >
+			android:label="Set Up a Comparison" >
 		</activity>
 		<activity
 			android:name="edu.illinois.engr.web.cs465uiui.comparison.list.ComparisonListActivity"
