--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,21 +8,23 @@
 		android:minSdkVersion="15"
 		android:targetSdkVersion="21" />
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 	
 	<uses-feature
         android:glEsVersion="0x00020000"
         android:required="true"/>
-
+	
+	
 	<application
 		android:allowBackup="true"
 		android:icon="@drawable/ic_launcher"
 		android:label="@string/app_name"
 		android:theme="@style/AppTheme" >
+		
 		<activity
 			android:name="edu.illinois.engr.web.cs465uiui.MainActivity"
 			android:label="@string/title_activity_main" >
@@ -31,26 +33,33 @@
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
+		
 		<activity
 			android:name="edu.illinois.engr.web.cs465uiui.search.SearchActivity"
 			android:windowSoftInputMode="stateHidden"
-			android:label="@string/app_name" >
-		</activity>
+			android:label="@string/app_name" />
+		
+		<activity
+			android:name="edu.illinois.engr.web.cs465uiui.GraphActivity"
+			android:label="Crowd Graph" />
+		
 		<activity
 			android:name="edu.illinois.engr.web.cs465uiui.QueryActivity"
-			android:label="Set Up a Comparison" >
-		</activity>
+			android:label="Set Up a Comparison" />
+		
 		<activity
 			android:name="edu.illinois.engr.web.cs465uiui.comparison.list.ComparisonListActivity"
 			android:label="@string/app_name" />
+		
 		<activity
 			android:name="edu.illinois.engr.web.cs465uiui.comparison.map.ComparisonMapActivity"
 			android:configChanges="orientation|screenSize"
 			android:label="@string/app_name" />
+		
 		<activity
 			android:name="edu.illinois.engr.web.cs465uiui.search.SearchMapActivity"
-			android:label="@string/app_name">          
-		</activity>
+			android:label="@string/app_name"/>          
+		
 		
 		<meta-data android:name="com.google.android.gms.version"
 			android:value="@integer/google_play_services_version" />
