--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -27,7 +27,7 @@
 		
 		<activity
 			android:name="edu.illinois.engr.web.cs465uiui.MainActivity"
-			android:label="@string/title_activity_main" >
+			android:label="@string/app_name" >
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
